--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -30,7 +30,7 @@
                Additionally, I developed an API designed for extracting data from video games.
 
 - title: Internship, University College of London
-  period: 2016 - 2017
+  period: 2016
   description: Contributed to the development of [PRoNTo](http://www.mlnl.cs.ucl.ac.uk/pronto/) toolbox.
 
 - title: Student, University of Lisbon
