--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -6,6 +6,7 @@
                - Planning of feature implementations and architectural decisions in advance, with the aim of optimizing development efficiency and ensuring top-notch product quality;
                - To streamline our workflow, I employ effective task division strategies, breaking down complex projects into manageable components to enhance collaboration and facilitate progress tracking;
                Additionally, I developed custom tools using both Kotlin and JavaScript, to augment the overall productivity and improve output quality of the Mobile cluster (Android and IOS).
+               <a href="https://www.shecodes.io/">click here</a>
 
 - title: Android Engineer, ITSector
   period: 2020 - 2021
