--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -1,13 +1,10 @@
 - title: Android Engineer, Farfetch
   period: 2021 - present
   description: As an Android Engineer at Farfetch, I maintain and develop new features for the <a href="https://play.google.com/store/apps/details?id=com.farfetch.farfetchshop&hl=en&gl=US&pli=1">Farfetch App</a>.
-               My role encompasses a wide array of responsibilities, including&#58;
-               <ol>
-               <ul>Development of new features, maintenance, and the pursuit of exceptional user experiences in collaboration with our Design and Product teams;</ul>
-               <ul>Planning of feature implementations and architectural decisions in advance, with the aim of optimizing development efficiency and ensuring top-notch product quality;</ul>
-               <ul>To streamline our workflow, I employed effective task division strategies, breaking down complex projects into manageable components to enhance collaboration and facilitate progress tracking;</ul>
-               <ul>Developed custom tools using both Kotlin and JavaScript, to augment the overall productivity and improve output quality of the Mobile cluster (Android and IOS).</ul>
-               </ol>
+               My role encompasses a wide array of responsibilities, such as&#58; Development of new features, maintenance, and the pursuit of exceptional user experiences in collaboration with our Design and Product teams.
+               Planning of feature implementations and architectural decisions in advance, with the aim of optimizing development efficiency and ensuring top-notch product quality.
+               Employed effective task division strategies, breaking down complex features into manageable components to enhance collaboration and facilitate progress tracking.
+               Additionally, developed custom tools using both Kotlin and JavaScript, to augment the overall productivity and improve output quality of the Mobile cluster (Android and IOS).
 
 - title: Android Engineer, ITSector
   period: 2020 - 2021
