--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,19 +1,24 @@
-- title: Google I/O Connect 2023 - Amsterdam
+- title: Invtee at Google I/O Connect 2023
+  location: Amsterdam, The Netherlands
   period: Jun 2023
   description:
   
-- title: Speaker at Forúm Saude XXI 2019 - Torres Vedras, Portugal
+- title: Speaker at Forúm Saude XXI 2019
+  location: Torres Vedras, Portugal
   period: Sept 2019
   description:
 
-- title: Websummit 2018 - Lisbon, Portugal
+- title: Attendee at Websummit 2018 - Lisbon, Portugal
+  location: Lisbon, Portugal
   period: Nov 2018
   description: 
  
 - title: Volunteer at European Researchers’ Night 2017 - Lisbon, Portugal
+  location: Lisbon, Portugal
   period: Sept 2017
   description:
 
-- title: Presenter at LxMLS Demo Day with the Institute of Biophysics and Biomedical Engineering
+- title: Presenter at LxMLS Demo Day 2017
+  location: Lisbon, Portugal
   period: July 2017
   description:
