--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,4 +1,4 @@
-- title: Invtee at Google I/O Connect 2023
+- title: Invitee at Google I/O Connect 2023
   location: Amsterdam, The Netherlands
   period: Jun 2023
   description:
@@ -13,7 +13,7 @@
   period: Nov 2018
   description: 
  
-- title: Volunteer at European Researchers’ Night 2017 - Lisbon, Portugal
+- title: Volunteer at European Researchers’ Night 2017
   location: Lisbon, Portugal
   period: Sept 2017
   description:
