--- a/_data/events.yml
+++ b/_data/events.yml
@@ -8,7 +8,7 @@
   period: Sept 2019
   description:
 
-- title: Attendee at Websummit 2018 - Lisbon, Portugal
+- title: Attendee at Websummit 2018
   location: Lisbon, Portugal
   period: Nov 2018
   description: 
