--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,24 +1,24 @@
 - title: Invitee at Google I/O Connect 2023
   location: Amsterdam, The Netherlands
   period: Jun 2023
-  description:
+  description: Attended Android-related workshops and had meaningful discussions with Googlers and other attendees colleagues.
   
 - title: Speaker at Forúm Saude XXI 2019
   location: Torres Vedras, Portugal
   period: Sept 2019
-  description:
+  description: Gave a presentation on Neroes' products to experts on Health and entrepreneurs.
 
 - title: Attendee at Websummit 2018
   location: Lisbon, Portugal
   period: Nov 2018
-  description: 
+  description: Networked and attended Android and Cloud related Workshops.
  
-- title: Volunteer at European Researchers’ Night 2017
+- title: Presenter at European Researchers’ Night 2017
   location: Lisbon, Portugal
   period: Sept 2017
-  description:
+  description: Showcased Physiological data acquisition software.
 
 - title: Presenter at LxMLS Demo Day 2017
   location: Lisbon, Portugal
   period: July 2017
-  description:
+  description: Presented a demo of a Video-Game that employed Neurofeedback techniques to help users with anxiety.
