--- a/_data/events.yml
+++ b/_data/events.yml
@@ -1,17 +1,20 @@
 - title: Invitee at Google I/O Connect 2023
   location: Amsterdam, The Netherlands
   period: Jun 2023
-  description: Attended Android-related workshops and had meaningful discussions with Googlers and other attendees colleagues.
+  description: Attended Android-related workshops and had meaningful discussions with Googlers and other colleagues.
+  link: https://rafaelsramos.github.io/blog/IO-connect-amsterdam
   
 - title: Speaker at Forúm Saude XXI 2019
   location: Torres Vedras, Portugal
   period: Sept 2019
   description: Gave a presentation on Neroes' products to experts on Health and entrepreneurs.
+  link: https://forumsaudexxi.pt/
 
 - title: Attendee at Websummit 2018
   location: Lisbon, Portugal
   period: Nov 2018
   description: Networked and attended Android and Cloud related Workshops.
+  link: https://websummit.com/
  
 - title: Presenter at European Researchers’ Night 2017
   location: Lisbon, Portugal
