--- a/_data/events.yml
+++ b/_data/events.yml
@@ -20,8 +20,10 @@
   location: Lisbon, Portugal
   period: Sept 2017
   description: Showcased Physiological data acquisition software.
+  link: https://www.unl.pt/en/calendar/escolas/european-researchers-night-2017
 
 - title: Presenter at LxMLS Demo Day 2017
   location: Lisbon, Portugal
   period: July 2017
   description: Presented a demo of a Video-Game that employed Neurofeedback techniques to help users with anxiety.
+  link: http://lxmls.it.pt/2017/?page_id=32
