--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -10,6 +10,10 @@
   percentage: 75
   color: danger
 
+- name: Jetpack Compose
+  percentage: 70
+  color: primary
+
 - name: C#
   percentage: 60
   color: secondary
