--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -4,7 +4,8 @@
                My role encompasses a wide array of responsibilities, such as&#58; Development of new features, maintenance, and the pursuit of exceptional user experiences in collaboration with our Design and Product teams.
                Planning of feature implementations and architectural decisions in advance, with the aim of optimizing development efficiency and ensuring top-notch product quality.
                Employed effective task division strategies, breaking down complex features into manageable components to enhance collaboration and facilitate progress tracking.
-               Additionally, developed custom tools using both Kotlin and JavaScript, to augment the overall productivity and improve output quality of the Mobile cluster (Android and IOS).
+               Participated in API definition meetings cross-channels, to represent Android in GraphlQL definitions.
+               Additionally, developed custom tools using Kotlin and JavaScript, to augment the overall productivity and improve output quality of the Mobile cluster (Android and IOS).
 
 - title: Android Engineer, ITSector
   period: 2020 - 2021
