--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ author:
 # instagram         : your_username
 # kaggle            : your_username
   linkedin          : rafa-ramos
-  medium            : Rafaelsramos
+  medium            : rafaelsramos95
 # soundcloud        : your_username
 # spotify           : your_username
 # stackoverflow     : your_user_id
