--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -15,19 +15,19 @@
                Collaborated closely with designers and product managers and contributed to the delivery of a sophisticated and reliable product that met the demands of the financial sector.
                This experience refined my ability to work in cross-functional teams to achieve complex project goals.
 
+- title: Software Engineer, EmotAI
+  period: 2017 - 2019
+  description: During my time at EmotAI, I contributed to a range of innovative projects.
+               My primary responsibilities included developing an API that facilitated the connection of an EEG device to Android smartphones,
+               enabling real-time brain activity monitoring during meditation sessions through a dedicated Android app.
+               Additionally, I developed an API designed for extracting data from video games.
+
 - title: Software Engineer, Neroes (Extracurricular)
   period: 2018 - 2022
   description: As a dedicated software developer at Neroes. Using Unity, I created an engaging and immersive gameplay environment.
                Additionally, I worked on the integration of a Physical EEG device through the development of APIs in C#. This allowed users to interact with the game using their own brain-wave patterns.
                This project was further recognized with the award of an IAPMEI Scholarship.
                This job not only helped improve my technical skills but also sharpened my collaborative spirit in a dynamic startup environment.
-
-- title: Software Engineer, EmotAI (Extracurricular)
-  period: 2017 - 2019
-  description: During my time at EmotAI, I contributed to a range of innovative projects.
-               My primary responsibilities included developing an API that facilitated the connection of an EEG device to Android smartphones,
-               enabling real-time brain activity monitoring during meditation sessions through a dedicated Android app.
-               Additionally, I developed an API designed for extracting data from video games.
 
 - title: Internship, University College of London
   period: 2016
